src/objects/Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Field_Custom_Label__c</fullName>
        <label>Field Custom Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Order__c</fullName>
        <label>Sub Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Product_Configuration_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Product Configuration Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>default_value__c</fullName>
        <label>Default value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field_api_name__c</fullName>
        <label>Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field_form__c</fullName>
        <label>Field form</label>
        <referenceTo>Field_form__mdt</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>is_readonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is read only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Field</label>
    <pluralLabel>Fields</pluralLabel>
</CustomObject>